--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,6 +5,7 @@
     <block wx:else>
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      <cave-button type="primary" bind:click="handleClick">按钮</cave-button>
     </block>
   </view>
   <view class="usermotto">
